# minimal-latency-streaming-protocol

./: CMakeLists.txt  README.md  mlsp.c
examples/: mlsp_example_client.c  mlsp_example_server.c
